Fixed dark heading in dark mode

--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ a {
 @media (prefers-color-scheme: dark) {
 	:root {
 		background: #1e1e1e;
+		color: white;
 	}
 
   .github {
